# mia_gui

./: .gitignore  .prettierrc  LICENSE  README.md  eslint.config.mjs  index.html  next.config.mjs  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.js  vite.config.ts
.github/workflows/: main.yml
.next/: trace
.run/: Dev.run.xml
src/: App.jsx  App.tsx  App.vue  main.jsx  main.ts  main.tsx
src-next/: next.config.mjs  tsconfig.json
src-next/.next/: trace
src-next/.next/cache/: .rscinfo
src-next/app/: layout.tsx  page.tsx
src-next/app/files/: page.tsx
src-next/app/settings/: page.tsx
src-next/components/: About.tsx  ContextMenu.tsx  Sidebar.tsx  ToastWrapper.tsx  Updater.tsx
src-next/components/file-explorer/: Entries.tsx  EntryListing.tsx  Peek.tsx  Results.tsx  SearchBar.tsx
src-next/components/form/: ArrayField.tsx  Form.tsx  TextField.tsx
src-next/contexts/: ConfigContext.tsx  ContextMenuContext.tsx  ToastContext.tsx
src-next/data/: languages.ts
src-next/domain/enums/: EntrySort.ts
src-next/domain/factories/: ToastFactory.ts
src-next/domain/types/: Config.ts  Directory.ts  Language.ts  Toast.ts
src-next/hooks/: useAppForm.ts  useCurrentPath.ts  useDirectory.ts  useUpdater.ts  useZipDir.ts
src-next/styles/: App.css  styles.css
src-next/styles/components/: Sidebar.module.css  (+1 more)
src-next/utils/: format-utils.ts  get-dir.ts  open-in-ide.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/src/: errors.rs  main.rs
src-tauri/src/config/: mod.rs
src-tauri/src/repository/: directory.rs  entry.rs  languages.json  mod.rs  structs.rs  utils.rs  zip.rs
src/app/: layout.tsx  page.tsx
src/assets/: base.css  main.css
src/components/: DynamicConfigWrapper.tsx  FileExplorer.jsx  Nav.jsx  Nav.tsx  PathLink.tsx  Settings.jsx  SettingsInformation.jsx  Sidebar.jsx  Sidebar.tsx  Updater.tsx
src/contexts/: Config.module.css  ConfigContext.jsx  ConfigContext.tsx  ContextMenuContext.tsx  FileExplorerContext.tsx  ToastContext.jsx  ToastContext.tsx
src/data/: languages.ts
src/hooks/: useAppForm.ts  useCurrentPath.ts  useDirectory.ts  useFormContext.ts  useUpdater.ts  useZipDir.ts
src/router/: index.ts
src/stores/: counter.ts
src/styles/: App.css  styles.css
src/utils/: compare.ts  format-utils.ts  formatUtils.js  get-dir.ts  zip-dir.ts
src/views/: FilesView.vue  HomeView.vue  SettingsView.vue
(+55 files in other folders)
