[package]
name = "mia"
description = "Mia - Personal School Assistant"
version = "0.1.0"
edition = "2021"
authors = ["Azuyamat"]
license = "MIT"
repository = "https://github.com/Azuyamat/mia_gui"

[dependencies]
tauri = { version = "1.7.2", features = [] }

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
