[package]
name = "mia"
version = "0.0.0"
description = "A Tauri App"
authors = ["Azuyamat"]
license = ""
repository = "https://github.com/Azuyamat/mia"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.5.1"
thiserror = { version = "1.0.50", features = [] }
once_cell = "1.18.0"
zip = "0.6.6"
chrono = "0.4.31"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
